k8s/ingress/voting-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: vote.joao.and.irene.ironlabs.online
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
    - host: result.joao.and.irene.ironlabs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
